<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ds"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/cf"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!--  Name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="#fff"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:inputType="textCapWords"

                android:hint="Name"
                android:textColorHint="#fff"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#fff"
                android:hint="Email" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:inputType="textCapWords"
                android:hint="Phone number" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="Select your Department"
            android:textAllCaps="true"
            android:textColor="#fff"

            android:textSize="15sp" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="100sp"
            android:layout_height="30sp"
            android:layout_marginTop="8dp"
            android:textColorHint="#fff"
            android:layout_marginLeft="125sp"
            android:layout_marginBottom="15dp"
            android:background="#FF9800"

            android:popupBackground="#FFB74D"
            android:textColor="#fff" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:textColorHint="#fff"
            android:text="Select your year"
            android:textAllCaps="true"
            android:textColor="#fff"

            android:textSize="15sp" />
        <Spinner
            android:id="@+id/spinnertwo"
            android:layout_width="100sp"
            android:layout_height="30sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="125sp"
            android:textColorHint="#fff"
            android:layout_marginBottom="15dp"
            android:background="#FF9800"
            android:popupBackground="#FFB74D"
            android:textColor="#fff" />



        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:hint="Password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Signup Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="#FF9800"
            android:textColor="#fff"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:onClick="login"
            android:text="Create Account"/>



    </LinearLayout>
</ScrollView>
